..F....PS. [ZBX-10076] fixed text information containing non-ASCII characters being saved incorrectly to IBM DB2 database in case of system locale misconfiguration (gleb, Oleg)
..F....... [ZBX-9989] optimized SQL queries for graphs building (Gunars, Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.4rc1

New features:

Bug fixes:
..F....... [ZBX-10895] fixed option URL value in step of web scenario popup; thanks to Fernando Schmitt for patch (Cemeris)
..F....... [ZBX-10931] fixed strings being untranslatable in Reports -> Triggers top 100 (zalex_ua)
..F....... [ZBX-10866] fixed calendar time for cases when local time zone differs from servers time zone (Cemeris)
..F....... [ZBX-10866] fixed starting value of time selector for events, graphs and screens (Cemeris)
..F....... [ZBX-10732] fixed default values for "Show", "Area type" and "Automatic icon selection" options in Map element popup (Cemeris)
...G...... [ZBX-10622] fixed handling of socket connection error messages on Windows; thanks to Yuri Volkov for patch (viktors)
.......PS. [ZBX-10828] fixed server/proxy crashes when performing Simple checks with invalid key parameters hidden in user macro (viktors)
..F....... [ZBX-10789] fixed drawing graphs with items that have scheduling intervals (Cemeris)
...G...... [ZBX-10852] fixed agent compilation on AIX 5.2, AIX 5.3 (wiper)
..F....... [ZBX-10457] fixed copying triggers to groups with multiple hosts or templates (Ivo)
..F....... [ZBX-10872] fixed selection of application in application popup (Cemeris)
........S. [ZBX-10848] fixed applications getting unlinked from undiscovered items (wiper)
.......PS. [ZBX-10819] fixed server/proxy compilation error on Solaris 10 (viktors)
A.F....... [ZBX-9455] fixed length limit for host prototype name (Gunars, Sasha)
..F....... [ZBX-10806] fixed whitespace between elements in host, host mass update, host prototype and proxy forms (Sasha)