@@ -31,6 +31,7 @@ Changes for 3.0.4rc1
 New features:
 
 Bug fixes:
+A......... [ZBX-10880] fixed support of sending several Request object at the same time to JSON-RPC (Cemeris)
 ..F....... [ZBX-10895] fixed option URL value in step of web scenario popup; thanks to Fernando Schmitt for patch (Cemeris)
 ..F....... [ZBX-10931] fixed strings being untranslatable in Reports -> Triggers top 100 (zalex_ua)
 ..F....... [ZBX-10866] fixed calendar time for cases when local time zone differs from servers time zone (Cemeris)
